@@ -3,11 +3,10 @@ package net.midget807.narchaotics.emi;
 import dev.emi.emi.api.FabricEmiStack;
 import dev.emi.emi.api.recipe.EmiRecipe;
 import dev.emi.emi.api.recipe.EmiRecipeCategory;
-import dev.emi.emi.api.render.EmiTexture;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
-import net.midget807.narchaotics.recipe.FilterRecipe;
+import net.midget807.narchaotics.recipe.EvaporateRecipe;
 import net.midget807.narchaotics.registry.ModEmiPlugin;
 import net.midget807.narchaotics.util.ModEmiUtils;
 import net.minecraft.client.gui.tooltip.TooltipComponent;
@@ -17,27 +16,27 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 
-public class FilterEmiRecipe implements EmiRecipe {
+public class EvaporateEmiRecipe implements EmiRecipe {
     private final Identifier id;
     private final List<EmiIngredient> inputs;
     private final List<EmiStack> outputs;
-    private final FilterRecipe recipe;
+    private final EvaporateRecipe recipe;
 
-    public FilterEmiRecipe(RecipeEntry<FilterRecipe> recipe) {
+    public EvaporateEmiRecipe(RecipeEntry<EvaporateRecipe> recipe) {
         this.id = recipe.id();
         this.inputs = List.of(
-                FabricEmiStack.of(recipe.value().input.variant(), recipe.value().input.amount() * 81)
+                FabricEmiStack.of(recipe.value().input.variant(), recipe.value().input.amount() * 81),
+                EmiIngredient.of(recipe.value().fuelType)
         );
         this.outputs = List.of(
-                FabricEmiStack.of(recipe.value().filtrate.variant(), recipe.value().filtrate.amount() * 81),
-                EmiStack.of(recipe.value().residue)
+                EmiStack.of(recipe.value().output)
         );
         this.recipe = recipe.value();
     }
 
     @Override
     public EmiRecipeCategory getCategory() {
-        return ModEmiPlugin.FILTER_CATEGORY;
+        return ModEmiPlugin.EVAPORATE_CATEGORY;
     }
 
     @Override
@@ -67,13 +66,13 @@ public class FilterEmiRecipe implements EmiRecipe {
 
     @Override
     public void addWidgets(WidgetHolder widgets) {
-        widgets.addFillingArrow(26, 1, 50 * recipe.getFilterTime()).tooltip((mx, my) -> {
-            return List.of(TooltipComponent.of(ModEmiUtils.ordered(ModEmiUtils.translatable("emi.cooking.time", recipe.getFilterTime() / 20f))));
+        widgets.addFillingArrow(49, 1, 50 * recipe.getEvaporateTime()).tooltip((mx, my) -> {
+            return List.of(TooltipComponent.of(ModEmiUtils.ordered(ModEmiUtils.translatable("emi.cooking.time", recipe.getEvaporateTime() / 20f))));
         });
 
-        widgets.addTank(inputs.getFirst(), 1, 1, 18, 18, 250 * 81);
+        widgets.addTank(inputs.getFirst(), 1, 1, 18, 18, 250 * 81).recipeContext(this);
+        widgets.addSlot(inputs.get(1), 23, 1).recipeContext(this);
 
-        widgets.addSlot(outputs.get(1), 81, 1).recipeContext(this);
-        widgets.addTank(outputs.get(0), 57, 1, 18, 18, 250 * 81).recipeContext(this);
+        widgets.addSlot(outputs.getFirst(), 81, 1).recipeContext(this);
     }
 }
